--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
   }
